--- a/local/templates/m2property/components/bitrix/catalog.section.list/autor_combo/style.css
+++ b/local/templates/m2property/components/bitrix/catalog.section.list/autor_combo/style.css
@@ -1,8 +1,24 @@
 .author-collection {
+
   & h2 {
     margin-bottom: 80px;
 
+    @media(max-width: 992px) {
+      margin-bottom: 26px;
+    }
+
     & span {}
+  }
+
+  .author-collection__inner {
+    padding: 121px 50px 30px;
+
+    border-radius: 50px;
+    background: #F5F5F5;
+
+    @media(max-width: 992px) {
+      padding: 42px 20px 10px;
+    }
   }
 
   & .author-collection___items {
@@ -10,11 +26,36 @@
     grid-template-columns: repeat(4, 1fr);
     gap: 20px;
 
+
+    @media(max-width:1700px) {
+      grid-template-columns: repeat(3, 1fr);
+    }
+
+    @media(max-width:1200px) {
+      grid-template-columns: repeat(1, 1fr);
+    }
+
     & .author-collection___item {
       height: 663px;
 
+      @media(max-width:1700px) {
+        height: 550px;
+      }
+
+      @media(max-width: 992px) {
+        height: 350px;
+      }
+
+      @media(max-width: 600px) {
+        height: 170px;
+      }
+
       &:first-child {
         grid-column-end: span 2;
+
+        @media(max-width:1700px) {
+          grid-column-end: span 1;
+        }
       }
 
       & a {
@@ -28,6 +69,10 @@
         border-radius: 20px;
         border: 1px solid #D3D3D2;
         overflow: hidden;
+
+        @media(max-width: 992px) {
+          padding: 20px;
+        }
 
         & .author-collection___item-image {
           position: absolute;
@@ -51,14 +96,15 @@
           height: 0%;
           z-index: 2;
           width: 100%;
-          height: 70%;
+          height: 34%;
+          backdrop-filter: blur(2px);
         }
 
         & .author-collection___item-name {
           color: #fff;
-          font-size: 32px;
+          font-size: 35px;
           font-style: normal;
-          font-weight: 400;
+          font-weight: 500;
           line-height: 90%;
           position: relative;
           z-index: 3;
@@ -66,6 +112,17 @@
           align-items: flex-end;
           gap: 15px;
           margin-bottom: 20px;
+
+          @media(max-width: 992px) {
+            font-size: 20px;
+            font-style: normal;
+            line-height: 100%;
+            margin-bottom: 9px;
+
+            & svg {
+              max-width: 30%;
+            }
+          }
         }
 
         & .author-collection___item-description {
@@ -77,6 +134,13 @@
           color: #fff;
           position: relative;
           z-index: 3;
+
+          @media(max-width: 992px) {
+            font-size: 12px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 100%;
+          }
         }
       }
     }
