--- a/local/templates/m2property/components/bitrix/catalog.section/best_offers/style.css
+++ b/local/templates/m2property/components/bitrix/catalog.section/best_offers/style.css
@@ -1,90 +1,98 @@
-@media (min-width: 1200px){
-	/*lg*/
-	/*6*/
-	.product-item-list-col-6   > .col-xs-12 > .row > .col-md-2:nth-child(6n+1),
-	.product-item-list-col-1-6 > .col-sm-6:nth-child(2n+1),
-	.product-item-list-col-6-1 > .col-sm-6:nth-child(2n+1),
-	.product-item-list-col-1-6 > .col-sm-6  > .row > .col-md-4:nth-child(3n+1),
-	.product-item-list-col-6-1 > .col-sm-6  > .row > .col-md-4:nth-child(3n+1),
-	/*4*/
-	.product-item-list-col-4   > .col-xs-12 > .row > .col-md-3:nth-child(4n+1),
-	.product-item-list-col-1-4 > .col-sm-6 >  .row > .col-xs-6:nth-child(2n+1),
-	.product-item-list-col-4-1 > .col-sm-6 >  .row > .col-xs-6:nth-child(2n+1),
-	/*3*/
-	.product-item-list-col-3   > .col-xs-12 > .row > .col-sm-4:nth-child(3n+1),
-	/*2*/
-	.product-item-list-col-2   > .col-xs-12 > .row > .col-xs-6:nth-child(2n+1),
-	/*1*/
-	.product-item-list-col-1   > .col-xs-12 > .row > .col-xs-12:nth-child(1n){clear: both}
-}
-@media (min-width: 992px) and (max-width:1199px){
-	/*md*/
-	/*6*/
-	.product-item-list-col-6   > .col-xs-12 > .row > .col-md-2:nth-child(6n+1),
-	.product-item-list-col-1-6 > .col-sm-6:nth-child(2n+1),
-	.product-item-list-col-6-1 > .col-sm-6:nth-child(2n+1),
-	.product-item-list-col-1-6 > .col-sm-6 > .row > .col-md-4:nth-child(3n+1),
-	.product-item-list-col-6-1 > .col-sm-6 > .row > .col-md-4:nth-child(3n+1),
-	/*4*/
-	.product-item-list-col-4   > .col-xs-12 > .row > .col-md-3:nth-child(4n+1),
-	.product-item-list-col-1-4 > .col-sm-6 >  .row > .col-xs-6:nth-child(2n+1),
-	.product-item-list-col-4-1 > .col-sm-6 >  .row > .col-xs-6:nth-child(2n+1),
-	/*3*/
-	.product-item-list-col-3   > .col-xs-12 > .row > .col-sm-4:nth-child(3n+1),
-	/*2*/
-	.product-item-list-col-2   > .col-xs-12 > .row > .col-xs-6:nth-child(2n+1),
-	/*1*/
-	.product-item-list-col-1   > .col-xs-12 > .row > .col-xs-12:nth-child(1n){clear: both}
-}
-@media (min-width: 768px) and (max-width: 991px){
-	/*sm*/
-	/*6*/
-	.product-item-list-col-6   > .col-xs-12 > .row > .col-sm-4:nth-child(3n+1),
-	.product-item-list-col-1-6 > .col-sm-6:nth-child(2n+1),
-	.product-item-list-col-6-1 > .col-sm-6:nth-child(2n+1),
-	.product-item-list-col-1-6 > .col-sm-6 >  .row > .col-xs-6:nth-child(2n+1),
-	.product-item-list-col-6-1 > .col-sm-6 >  .row > .col-xs-6:nth-child(2n+1),
-	/*4*/
-	.product-item-list-col-4   > .col-xs-12 > .row > .col-xs-6:nth-child(2n+1),
-	.product-item-list-col-1-4 > .col-sm-6:nth-child(2n+1),
-	.product-item-list-col-4-1 > .col-sm-6:nth-child(2n+1),
-	.product-item-list-col-1-4 > .col-sm-6 >  .row > .col-xs-6:nth-child(2n+1),
-	.product-item-list-col-4-1 > .col-sm-6 >  .row > .col-xs-6:nth-child(2n+1),
-	/*3*/
-	.product-item-list-col-3   > .col-xs-12 > .row > .col-sm-4:nth-child(3n+1),
-	/*2*/
-	.product-item-list-col-2   > .col-xs-12 > .row > .col-xs-6:nth-child(2n+1),
-	/*1*/
-	.product-item-list-col-1   > .col-xs-12 > .row > .col-xs-12:nth-child(1n){clear: both}
-}
-@media (max-width: 767px){
-	/*xs*/
-	/*6*/
-	.product-item-list-col-6   > .col-xs-12 > .row > .col-xs-6:nth-child(2n+1),
-	.product-item-list-col-1-6 > .col-sm-6 >  .row > .col-xs-6:nth-child(2n+1),
-	.product-item-list-col-6-1 > .col-sm-6 >  .row > .col-xs-6:nth-child(2n+1),
-	/*4*/
-	.product-item-list-col-4   > .col-xs-12 > .row > .col-xs-6:nth-child(2n+1),
-	.product-item-list-col-1-4 > .col-sm-6 >  .row > .col-xs-6:nth-child(2n+1),
-	.product-item-list-col-4-1 > .col-sm-6 >  .row > .col-xs-6:nth-child(2n+1),
-	/*3*/
-	.product-item-list-col-3   > .col-xs-12 > .row > .col-sm-4:nth-child(3n+1),
-	/*2*/
-	.product-item-list-col-2   > .col-xs-12 > .row > .col-xs-6:nth-child(2n+1),
-	/*1*/
-	.product-item-list-col-1   > .col-xs-12 > .row > .col-xs-12:nth-child(1n){clear: both}
-}
+.best {
 
-.catalog-section-header{
-	font-size:14px;
-	font-weight: bold;
-	text-align: left;
-	margin:5px 0;
-	padding:5px 15px;
-	border-bottom: 2px solid #d9dee6;
-	color: #000;
-}
+  & .best-inner {
+    padding: 112px 30px 32px 30px;
+    position: relative;
+    border-radius: 20px;
+    overflow: hidden;
 
-.row::before {
-	display: initial;
+    @media(max-width: 992px) {
+      padding: 10px;
+    }
+
+    & .best-image {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+
+      & img {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+      }
+    }
+
+    & .best-head {
+      display: flex;
+      align-items: flex-end;
+      margin-bottom: 80px;
+      position: relative;
+
+      @media(Max-width: 992px) {
+        padding-top: 42px;
+        margin-bottom: 34px;
+      }
+
+      @media(max-width: 1150px) {
+        flex-direction: column;
+        align-items: flex-start;
+
+        & .link-to {
+          margin-left: 0;
+          margin-top: 26px;
+
+          @media(max-width: 992px) {
+            padding: 10px;
+            height: 32px;
+            max-width: 115px;
+            gap: 3px;
+
+            & span {
+              font-size: 12px;
+              font-style: normal;
+              font-weight: 500;
+              line-height: 100%;
+            }
+
+            & svg {
+              width: 15px;
+              height: 15px;
+              min-width: 15px;
+            }
+          }
+        }
+      }
+
+      &>svg {
+        position: relative;
+        z-index: 2;
+
+        @media(Max-width: 1150px) {
+          position: absolute;
+          right: 0;
+          top: 50%;
+          transform: translateY(-100%);
+        }
+
+        @media(Max-width: 992px) {
+          max-width: 30%;
+          transform: translate(-20%, -70%);
+        }
+      }
+
+      & h2 {
+        color: #fff;
+        margin-right: 10px;
+        position: relative;
+        z-index: 2;
+
+        & span {
+          color: rgba(255, 255, 255, 0.60);
+        }
+      }
+
+    }
+  }
 }
