--- a/local/templates/m2property/components/bitrix/news.list/last_articles/style.css
+++ b/local/templates/m2property/components/bitrix/news.list/last_articles/style.css
@@ -1,21 +1,83 @@
 .last-blog {
+  @media(max-width: 992px) {
+    border-radius: 20px;
+    background: #F5F5F5;
+    padding: 10px;
+    padding-top: 42px;
+    padding-bottom: 40px;
+  }
+
   & .last-blog__head {
     margin-bottom: 80px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 
+    @media(max-width: 992px) {
+      margin-bottom: 33px;
+    }
+
     & h2 {}
+  }
+
+  & .link-to.moved {
+    margin-top: 30px;
+    margin-left: 0;
+  }
+
+  & .link-to {
+    @media(max-width: 992px) {
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: 100%;
+      padding: 15px 30px;
+      height: 54px;
+      gap: 3px;
+      max-width: 194px;
+
+      & span {
+        font-size: 16px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 100%;
+      }
+      & svg {
+        width: 15px;
+        height: 15px;
+      }
+
+    }
   }
 
   & .last-news__items {
     display: flex;
     gap: 20px;
 
+    @media(max-width: 1200px) {
+      flex-direction: column;
+    }
+
     & .last-news__item {
       max-width: 593px;
       width: 100%;
       height: 663px;
+
+      @media(max-width: 1200px) {
+        max-width: 100%;
+      }
+
+      @media(max-width:1700px) {
+        height: 550px;
+      }
+
+      @media(max-width: 992px) {
+        height: 350px;
+      }
+
+      @media(max-width: 600px) {
+        height: 170px;
+      }
 
       & a {
         display: flex;
@@ -29,6 +91,10 @@
         border: 1px solid #D3D3D2;
         overflow: hidden;
         padding: 40px;
+
+        @media(max-width:1700px) {
+          padding: 20px;
+        }
 
         & .last-news__item-image {
           position: absolute;
@@ -64,8 +130,17 @@
           font-weight: 400;
           line-height: 90%;
           margin-bottom: 1px;
-          max-width: 344px;
+          max-width: 80%;
           margin-bottom: 19px;
+
+          @media(max-width: 992px) {
+            font-size: 20px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 100%;
+            margin-bottom: 10px;
+          }
+
           /* 31.5px */
         }
 
@@ -79,8 +154,23 @@
           font-style: normal;
           font-weight: 400;
           line-height: 100%;
-          max-width: 344px;
-          /* 18px */
+          max-width: 80%;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          display: -moz-box;
+          -moz-box-orient: vertical;
+          display: -webkit-box;
+          -webkit-line-clamp: 2;
+          -webkit-box-orient: vertical;
+          line-clamp: 2;
+          box-orient: vertical;
+
+          @media(max-width: 992px) {
+            font-size: 12px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 100%;
+          }
         }
 
         & .last-news__item-arrow {
@@ -97,6 +187,16 @@
           justify-content: center;
           align-items: center;
           z-index: 3;
+
+          @media(max-width: 1700px) {
+            right: 20px;
+            bottom: 20px;
+          }
+
+          @media(max-width: 992px) {
+            width: 34px;
+            height: 34px;
+          }
         }
       }
     }
