--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1515,6 +1515,8 @@
 
  }
 
+ 
+
  .modal {
    position: fixed;
    left: 0;
@@ -1525,6 +1527,9 @@
    display: flex;
    align-items: center;
    justify-content: center;
+   transform: scale(0);
+   opacity: 0;
+   transition: all .3s ease-in;
 
    & .modal-inner {
      max-width: 1642px;
@@ -1534,6 +1539,37 @@
      padding: 50px;
      display: flex;
      flex-direction: column;
+     padding-bottom: 289px;
+     position: relative;
+     overflow: hidden;
+
+     @media(max-width: 1700px) {
+       width: 95%;
+       padding-bottom: 150px;
+     }
+
+     @media(max-width: 992px) {
+       padding: 20px;
+       border-radius: 20px;
+     }
+
+     & .form-decor {
+       position: absolute;
+       left: 0;
+       bottom: 0;
+       width: 100%;
+       height: 188px;
+
+       @media(max-width: 992px) {
+         display: none;
+       }
+
+       & img {
+         object-fit: contain;
+         width: 100%;
+         height: 100%;
+       }
+     }
 
      & .close-modal {
        border-radius: 110px;
@@ -1546,17 +1582,65 @@
        justify-content: center;
        align-self: flex-end;
        margin-bottom: 43px;
+
+       @media(max-width: 992px) {
+         margin-bottom: 30px;
+         width: 32px;
+         height: 32px;
+
+         & svg {
+           width: 20px;
+           height: 20px;
+         }
+       }
      }
 
      & .modal-content {
        display: flex;
        gap: 54px;
 
+       @media(max-width: 992px) {
+         flex-direction: column;
+       }
+
        & .modal-content__info {
          max-width: 700px;
 
+         @media(max-width: 1200px) {
+           max-width: 450px;
+         }
+
+         @media(max-width: 992px) {
+           max-width: 100%;
+         }
+
          & h2 {
            margin-bottom: 50px;
+           position: relative;
+
+           @media(max-width: 992px) {
+             margin-bottom: 29px;
+           }
+
+           & svg {
+             position: absolute;
+             bottom: -10px;
+             right: 20%;
+
+             @media(max-width: 1700px) {
+               width: 150px;
+               right: 30%;
+               position: relative;
+               right: initial;
+               bottom: initial;
+               height: 50px;
+             }
+
+             @media(max-width: 992px) {
+               width: 145px;
+               height: 35px;
+             }
+           }
          }
 
          & p {
@@ -1565,7 +1649,13 @@
            font-style: normal;
            font-weight: 500;
            line-height: 100%;
-           /* 30px */
+
+           @media(max-width: 992px) {
+             font-size: 16px;
+             font-style: normal;
+
+             line-height: 100%;
+           }
          }
        }
 
@@ -1574,22 +1664,150 @@
          width: 100%;
 
          & .input-wrap {
+           @media(max-width: 992px) {
+             height: 42px;
+           }
+
            & input {
              border-radius: 50px;
              background: #FFF;
              border: none;
+             padding-left: 30px;
            }
+
            &:first-child {
-            margin-bottom: 10px;
+             margin-bottom: 10px;
            }
-            &:last-child {
-            margin-bottom: 20px;
+
+           &:last-child {
+             margin-bottom: 20px;
+           }
+         }
+
+         & .submit {
+           border-radius: 110px;
+           background: #FF7400;
+           backdrop-filter: blur(17px);
+           display: block;
+           text-align: center;
+           padding: 19px 50px;
+           max-width: fit-content;
+           height: 58px;
+           margin-top: 20px;
+           margin-bottom: 24px;
+           color: #FFF;
+           font-size: 25px;
+           font-style: normal;
+           font-weight: 500;
+           line-height: 100%;
+           cursor: pointer;
+
+           @media(max-width: 992px) {
+             height: 44px;
+             font-size: 14px;
+             font-style: normal;
+             line-height: 100%;
+             padding-top: 0;
+             padding-bottom: 0;
+             align-items: center;
+             margin-bottom: 10px;
+             margin-top: 10px;
            }
          }
        }
      }
    }
+
+   &.active {
+     transform: scale(1);
+     opacity: 1;
+     transition: all .3s ease-in;
+   }
  }
+
+ .agreed-col {
+   display: flex;
+   flex-direction: column;
+   gap: 10px;
+ }
+
+ .custom-checkbox {
+   display: inline-flex;
+   align-items: center;
+   gap: 15px;
+   cursor: pointer;
+   user-select: none;
+ }
+
+ .custom-checkbox input {
+   position: absolute;
+   opacity: 0;
+   pointer-events: none;
+ }
+
+ .custom-checkbox__box {
+   width: 15px;
+   height: 15px;
+   min-width: 15px;
+   border: 1px solid #FF7400;
+   border-radius: 4px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   transition: background .2s, border .2s;
+ }
+
+ .custom-checkbox__box::before {
+   content: '';
+   width: 8px;
+   height: 4px;
+   top: -1px;
+   position: relative;
+   border-left: 1px solid #FF7400;
+   border-bottom: 1px solid #FF7400;
+   transform: rotate(-45deg) scale(0);
+   transition: transform .2s;
+ }
+
+ .custom-checkbox input:checked+.custom-checkbox__box {
+   background: #EBEBEB;
+   border-color: #FF7400;
+ }
+
+ .custom-checkbox input:checked+.custom-checkbox__box::before {
+   transform: rotate(-45deg) scale(1);
+ }
+
+ .custom-checkbox__text {
+   color: #7C8589;
+   font-size: 14px;
+   font-style: normal;
+   font-weight: 400;
+   line-height: 100%;
+
+   @media(max-width: 992px) {
+     font-size: 10px;
+     font-style: normal;
+     font-weight: 400;
+     line-height: 100%;
+   }
+
+   & a {
+     color: #FF7400;
+     font-size: 14px;
+     font-style: normal;
+     font-weight: 400;
+     line-height: 100%;
+
+     @media(max-width: 992px) {
+       font-size: 10px;
+       font-style: normal;
+       font-weight: 400;
+       line-height: 100%;
+     }
+   }
+ }
+
 
  .overlay {
    background: rgba(36, 34, 32, 0.70);
